--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "gatsby": "^2.19.7",
     "gatsby-cli": "^2.8.29",
     "gatsby-image": "^2.2.40",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-advanced-sitemap": "^1.5.4",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-manifest": "^2.4.4",
+    "gatsby-plugin-next-seo": "^1.5.0",
+    "gatsby-plugin-offline": "^3.2.2",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-source-filesystem": "^2.1.47",
     "gatsby-transformer-remark": "^2.6.49",
@@ -20,6 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.6",
     "react-icons": "^3.9.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
